force-app/main/default/objects/Holded_Contact_Link__c/Holded_Contact_Link__c.object-meta.xml
<CustomObject>
    <label>Holded Contact Link</label>
    <pluralLabel>Holded Contact Links</pluralLabel>
    <nameField>
        <displayFormat>HCL-{000000}</displayFormat>
        <label>Holded Contact Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Id del contacto en cada cuenta de Holded.</description>
</CustomObject>