force-app/main/default/objects/Holded_Contact_Link__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Holded_Links</relationshipName>
    <relationshipLabel>Holded Links</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>