force-app/main/default/objects/Holded_Contact_Link__c/fields/Holded_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Holded_Contact_Id__c</fullName>
    <label>Holded Contact Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>