force-app/main/default/objects/Holded_Contact_Link__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <type>Text</type>
    <length>120</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>